--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   
     yesButton.addEventListener('click', () => {
       imageDisplay.src = './images/personalizedimg.gif'; // Change to image7.gif
-      valentineQuestion.textContent = "THANK YOIUUUU SHONNAAAAAA!! :3333 I'LL MEET YOU AT 9 PM TOMORROW NIGHT <333 (GOOGLE MEET YAYYY)"; // Change the question text
+      valentineQuestion.textContent = "THANK YOUUUU SHONNAAAAAA!! :3333! 14 FEB 9 PM GOOGLE MEET I LOVE YOU SEE YOU THEREEEE"; // Change the question text
       responseButtons.style.display = 'none'; // Hide both buttons
       confetti(); // Trigger confetti animation
     });
