--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     let buttonWidth = 80;
     let fontSize = 20; // Starting font size in pixels
     const imagePaths = [
-      "./images/image1.gif",
-      "./images/image2.gif",
-      "./images/image3.gif",
-      "./images/image4.gif",
-      "./images/image5.gif",
-      "./images/image6.gif",
-      "./images/image7.gif"
+      "./images/firstanim.gif",
+      "./images/secondanim.gif",
+      "./images/thirdanim.gif",
+      "./images/fourthanim.gif",
+      "./images/fifthanim.gif",
+      "./images/sixthanim.gif",
+      "./images/personalizedimg.gif"
     ];
   
     noButton.addEventListener('click', function() {
